活动的评论展示和评论列表页。

--- a/app/views/comments/event_comment_detail.html.erb
+++ b/app/views/comments/event_comment_detail.html.erb
@@ -14,7 +14,7 @@
 
         <div class="section last">
           <div class="wp_space_line top">
-            <%= link_to event_path(@event), :class => "btn_gray float_r" do %>
+            <%= link_to event_comments_path(@event), :class => "btn_gray float_r" do %>
               <span>返回所有评论</span>
             <% end %>
             <div class="clear"></div>
