--- a/app/views/comments/event_photo_comment_detail.html.erb
+++ b/app/views/comments/event_photo_comment_detail.html.erb
@@ -6,7 +6,7 @@
 		<%= render "events/event_detail" %>
 		<div class="section">
 			<div class="title">
-				<%= link_to event_photos_path(@event), :class => "btn_gray float_r" do %>
+				<%= link_to event_photo_path(@event, @photo), :class => "btn_gray float_r" do %>
 					<span>返回</span>
 				<% end %>
 				<%= link_to photo_upload_event_path(@event), :class => "btn_gray float_r mr5" do %>
@@ -35,7 +35,7 @@
 					</div>
 					<div class="section last">
 						<div class="title">
-							<%= link_to "comments_list", :class => "btn_gray float_r font12" do %>
+							<%= link_to event_photo_path(@event, @photo), :class => "btn_gray float_r font12" do %>
 								<span>返回</span>
 							<% end %>
 							<h2>查看回复</h2>
