--- a/public/template/event_photo_list.html
+++ b/public/template/event_photo_list.html
@@ -97,7 +97,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </div>
                 </div>
                 <div class="pagination">
-                  <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
+                  <span class="disabled">  </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
               </div>
    	  </div>
             <div class="right">
