--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,7 +19,7 @@
             <%= event.tag_list.join(',') %>
           </span>
           <h1>
-            <%= link_to event.title, event_path(event)  %>
+            <%= link_to truncate_u(event.title, 29), event_path(event)  %>
           </h1>
           <div class="info">
             时间：<%= event.begin_end_at %>
@@ -89,7 +89,7 @@
                 <span class="type">
                   <%= event_item_tags(event) %>
                 </span>
-                <h2> <%= link_to event.title, event_path(event)  %></h2>
+                <h2><%= link_to truncate_u(event.title, 29), event_path(event)  %></h2>
                 <div class="info">时间:  <%= event.begin_end_at %><br />
                   地点:  <%= event.full_address %><br />
                   组织者：<%= link_to  event.user.username, 
@@ -221,9 +221,10 @@
             </div>
           <% end %> 
 
-
           <div class="sidebox">
             <%= render 'recommends' %>
           </div>
-          <div class="clear"></div>
+          <!--end right-->
         </div>
+        <div class="clear"></div>
+      </div>
