--- a/app/views/users/events/_recommends.html.erb
+++ b/app/views/users/events/_recommends.html.erb
@@ -9,20 +9,20 @@
           <%= image_tag event.poster_url(:x_thumb), 
             :size => '70x105', :alt => event.title %>
           <% end %>
-          <dd>
-            <h3> <%= link_to event.title, event_path(event)  %></h3>
-            <div class="info">
-              <%= event.begin_end_at %>
-              <br />
-              <%= event.full_address %>
-              <br />
-            </div>
-            <div class="p_count2">
-              <%= event.participants_count %>人参加  |  <%= event.followers_count %>人感兴趣
-            </div>
-          </dd>
-          <div class="clear"></div>
-        </dl>
-      <% end %>
-    </div>
-  </div>
+      </dt>
+      <dd>
+        <h3><%= link_to truncate_u(event.title, 20), event_path(event)  %></h3>
+        <div class="info">
+          <%= event.begin_end_at %>
+          <br />
+          <%= event.full_address %>
+          <br />
+        </div>
+        <div class="p_count2">
+          <%= event.participants_count %>人参加  |  <%= event.followers_count %>人感兴趣
+        </div>
+      </dd>
+      <div class="clear"></div>
+    </dl>
+  <% end %>
+</div>
