--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -134,7 +134,7 @@
                     <dd>
                       <h3><%= link_to event.title, event_path(event) %></h3>
                       <div class="info">
-                        <%= event.begin_end_at %>
+                        <%= event.begin_end_at_with_cn %>
                         <br />
                         <%= event.full_address %>
                       </div>
@@ -169,7 +169,7 @@
                     <dd>
                       <h3><%= link_to event.title, event_path(event) %></h3>
                       <div class="info">
-                        <%= event.begin_end_at %>
+                        <%= event.begin_end_at_with_cn %>
                         <br />
                         <%= event.full_address %>
                       </div>
@@ -204,7 +204,7 @@
                     <dd>
                       <h3><%= link_to event.title, event_path(event) %></h3>
                       <div class="info">
-                        <%= event.begin_end_at %>
+                        <%= event.begin_end_at_with_cn %>
                         <br />
                         <%= event.full_address %>
                       </div>
