--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -24,7 +24,7 @@ p.iw_action {margin: 5px 0 10px 0;}
 .iw_comment .right textarea {display:block;width:146px;height:20px;margin-bottom:5px;background-color:#fff; overflow-x:auto; overflow-y:auto;}
 .iw_comment .right a {float:right;}
 
-a.btn_iw {background:url(common/iw_btn_left.png) no-repeat left 0;background-position:display:inline-block;padding-left:10px;color:#999;text-decoration:none;}
+a.btn_iw {background:url(common/iw_btn_left.png) no-repeat left 0;display:inline-block;padding-left:10px;color:#999;text-decoration:none;}
 a.btn_iw span {background:url(common/iw_btn_right.png) no-repeat right 0;display:inline-block;height:30px;line-height:30px;padding:0 10px 0 0px;}
 a.btn_iw:hover {background:url(common/iw_btn_left.png) no-repeat left -30px;text-decoration:none;color:#333;}
 a.btn_iw:hover span {background:url(common/iw_btn_right.png) no-repeat right -30px;}
