邀请好友，图片更新

--- a/public/template/lightbox_add.html
+++ b/public/template/lightbox_add.html
@@ -48,7 +48,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         <h3>请选择要添加的内容类型</h3>
                         <ul>
                             <li>
-                                <a class="add_new_wine" href="#">添加新酒款</a>
+                                <a class="add_new_wine" href="#">添加新酒</a>
                             </li>
                             <li>
                                 <a class="add_cellar_wine" href="#">添加藏酒</a>
