--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -296,6 +296,16 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .follower li {position:relative;}
 .sidebox .userlist li {padding:0 10px 30px 0;_pading:0 10px 20px 0;zoom:1;}
 
+/*-------User list2--------*/
+.userlist2 {zoom:1;}
+.userlist2 li {width:50px;height:86px;overflow:hidden;float:left;padding:0 10px 20px 10px;_pading:0 10px 10px 10px;zoom:1;position:relative;}
+.userlist2 .userpic {width:50px;margin-right:15px;}
+.userlist2 .userinfo {text-align:center;margin-top:3px;}
+.userlist2 .userinfo .select {position:absolute;left:9px;top:37px;}
+.follower li {position:relative;}
+.sidebox .userlist2 li {padding:0 10px 30px 0;_pading:0 10px 20px 0;zoom:1;}
+
+
 /*---------table style-----------*/
 .data_style1 td {background-color:#f3f3f3;border-right:2px solid #fff;border-bottom:2px solid #fff;padding:2px 10px;}
 
