--- a/app/views/comments/share/_comment_sns.html.erb
+++ b/app/views/comments/share/_comment_sns.html.erb
@@ -1,17 +1,14 @@
-
 同时分享到：
 <span class="sns_switch share_weibo">
 	<% if current_user && current_user.check_oauth?('weibo') %>
 		<input type="hidden" name="sns_type[]" value="weibo"/>
 		<%= link_to "javascript:void(0);" do %>
-			<span class="sns_on"><%= image_tag("icon/r_g.png", :width => 14, :height => 14) %></span>
 			<%= image_tag "icon/weibo_s_on.png", :alt => "新浪微博", :width => "17", :height => "17", :align => "absmiddle", :class => "image_on" %>
 		<% end %>
 	<% else %>
 		<input type="hidden" name="sns_type[]" value="weibo" disabled="disabled" />
 			
-		<%= link_to user_omniauth_authorize_path(:weibo, :display => "popup"), :class => "sns_fancybox iframe" do %>
-			<span class="sns_on" style="display:none"><%= image_tag("icon/r_g.png", :width => 14, :height => 14) %></span>
+		<%= link_to "javascript:void(0);", :class => "non_connect" do %>
 			<%= image_tag "icon/weibo_s_off.png", :alt => "新浪微博", :width => "17", :height => "17", :class => "share_weibo_image", :align => "absmiddle" %>
 		<% end %>
 	<% end %>
@@ -20,13 +17,11 @@
 	<% if current_user && current_user.check_oauth?('qq') %>
 		<input type="hidden"  name="sns_type[]" value="qq"/>
 		<%= link_to "javascript:void(0);" do %>
-			<span class="sns_on"><%= image_tag("icon/r_g.png", :width => 14, :height => 14) %></span>
 			<%= image_tag "icon/tencen_s_on.png", :alt => "腾讯微博", :width => "17", :height => "17", :align => "absmiddle", :class => "image_on" %>
 		<% end %>
 	<% else %>
 		<input type="hidden" name="sns_type[]" value="qq" disabled="disabled"/>
-		<%= link_to new_sns_friends_path(:sns_name => "qq"), :class => "sns_fancybox iframe" do %>
-			<span class="sns_on" style="display:none"><%= image_tag("icon/r_g.png", :width => 14, :height => 14) %></span>
+		<%= link_to "javascript:void(0);", :class => "non_connect" do %>
 			<%= image_tag "icon/tencen_s_off.png", :alt => "腾讯微博", :width => "17", :height => "17", :align => "absmiddle", :class => "share_qq_image" %>
 		<% end %>
 	<% end %> 
@@ -35,26 +30,45 @@
 	<% if current_user && current_user.check_oauth?('douban') %>
 		<input type="hidden" name="sns_type[]" value="douban"/>
 		<%= link_to "javascript:void(0);" do %>
-			<span class="sns_on"><%= image_tag("icon/r_g.png", :width => 14, :height => 14) %></span>
 			<%= image_tag("icon/douban_s_on.png", :alt => "豆瓣", :width => "17", :height => "17", :align => "absmiddle", :class => "image_on") %>
 		<% end %>
 	<% else %>
 		<input type="hidden" name="sns_type[]" value="douban"  disabled="disabled"/>
-		<%= link_to new_sns_friends_path(:sns_name => "douban"), :class => "sns_fancybox iframe" do %>
-			<span class="sns_on" style="display:none"><%= image_tag("icon/r_g.png", :width => 14, :height => 14) %></span>
+		<%= link_to "javascript:void(0);", :class => "non_connect" do %>
 			<%= image_tag "icon/douban_s_off.png", :alt => "豆瓣", :width => "17", :height => "17", :align => "absmiddle", :class => "share_douban_image" %>
 		<% end %>
 	<% end %>
 </span>
 <script type="text/javascript">
+	function openSns(settings){
+		window.open(settings.url, "popUp", settings.style);
+	}
 	$("span.sns_switch").click(function(){
-		if ($("img.image_on", this).length > 0){
-			$("span.sns_on", this).toggle();
-			if ($("input", this).attr('disabled') == 'disabled'){
-				$("input", this).removeAttr('disabled');
-			}else{
-				$("input", this).attr('disabled', 'disabled');
+		var type = $(this).attr('class');
+	    var patt_weibo = new RegExp("weibo");
+	    var patt_qq = new RegExp("qq");
+	    var patt_douban = new RegExp('douban');
+		if ($("a", this).attr('class') == 'non_connect'){
+			if (patt_weibo.test(type)){
+				openSns({url:'<%= "#{root_url[0..-2]}#{user_omniauth_authorize_path(:weibo)}" %>', style:"width=770, height=460"});
+			}else if (patt_douban.test(type)){
+				openSns({url:"<%= new_sns_friends_url(:sns_name => 'douban') %>", style:"width=600, height=380"});
+			}else if (patt_qq.test(type)){
+				openSns({url:"<%= new_sns_friends_url(:sns_name => 'qq') %>", style:"width=840, height=830"});
 			}
+			return false;
+		}else{
+			console.log('non_connect');
+			if (patt_weibo.test(type)){
+				$("img", this).toggleAttr('src', "/assets/icon/weibo_s_on.png", "/assets/icon/weibo_s_off.png");
+			}else if(patt_douban.test(type)){
+				$("img", this).toggleAttr('src', "/assets/icon/douban_s_on.png", "/assets/icon/douban_s_off.png");
+			}else if(patt_qq.test(type)){
+				$("img", this).toggleAttr('src', "/assets/icon/tencen_s_on.png", "/assets/icon/tencen_s_off.png");
+			} 
+			$("input", this).toggleDisabled();
 		}
 	});
+
+
 </script>
