--- a/app/views/friends/sync.html.erb
+++ b/app/views/friends/sync.html.erb
@@ -29,26 +29,28 @@
 </div>
 <script type="text/javascript">
   <% if params[:success] %>
-    var href = parent.$('iframe.fancybox-iframe').attr('src');
-    var patt_weibo = new RegExp("weibo");
-    var patt_qq = new RegExp("qq");
-    var patt_douban = new RegExp('douban');
-    if (patt_weibo.test(href)){
-      parent.$('.share_weibo input').removeAttr('disabled');
-      parent.$('.share_weibo a').attr({href: 'javascript:void(0);', class: ''});
-      parent.$('.share_weibo .sns_on').toggle();
-      parent.$('.share_weibo_image').attr({src: '/assets/icon/weibo_s_on.png', class: 'image_on'});
-    }else if (patt_qq.test(href)){
-      parent.$('.share_qq input').removeAttr('disabled');
-      parent.$('.share_qq a').attr({href: 'javascript:void(0);', class: ''});
-      parent.$('.share_qq .sns_on').toggle();
-      parent.$('.share_qq_image').attr({src: '/assets/icon/tencen_s_on.png', class: 'image_on'});
-    }else if (patt_douban.test(href)){
-      parent.$('.share_douban input').removeAttr('disabled');
-      parent.$('.share_douban a').attr({href: 'javascript:void(0);', class: ''});
-      parent.$('.share_douban .sns_on').toggle();
-      parent.$('.share_douban_image').attr({src: '/assets/icon/douban_s_on.png', class: 'image_on'});
+    if (window.opener){
+      parent_dom = window.opener.document;
+      var href = window.location.href;
+      var patt_weibo = new RegExp("weibo");
+      var patt_qq = new RegExp("qq");
+      var patt_douban = new RegExp('douban');
+      if (patt_weibo.test(href)){
+        parent_dom.querySelector('.share_weibo input').removeAttribute('disabled');
+        parent_dom.querySelector('.share_weibo a').removeAttribute('class');
+        parent_dom.querySelector('.share_weibo img').setAttribute('src', "/assets/icon/weibo_s_on.png");
+      }else if (patt_qq.test(href)){
+        parent_dom.querySelector('.share_qq input').removeAttribute('disabled');
+        parent_dom.querySelector('.share_qq a').removeAttribute('class');
+        parent_dom.querySelector('.share_qq img').setAttribute('src', "/assets/icon/tencen_s_on.png");
+      }else if (patt_douban.test(href)){
+        parent_dom.querySelector('.share_douban input').removeAttribute('disabled');
+        parent_dom.querySelector('.share_douban a').removeAttribute('class');
+        parent_dom.querySelector('.share_douban img').setAttribute('src', "/assets/icon/douban_s_on.png");
+      }
+
+      close();
     }
-    parent.$.fancybox.close();
+
   <% end %>
 </script>
