message and notice update

--- a/public/template/notice_detail.html
+++ b/public/template/notice_detail.html
@@ -48,62 +48,37 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 	<div class="bg_r">
                     	<div class="bg_m">
                         	<ul class="clearfix">
-                            	<li class="p-message"><span class="arrow"></span><a class="current" href="message_list.html"><span class="new">2</span>私信</a></li>
-                                <li class="notice2"><a href="notice_list.html"><span class="new">1</span>通知</a></li>
+                            	<li class="p-message"><a href="message_list.html"><span class="new">2</span>私信</a></li>
+                                <li class="notice2"><span class="arrow"></span><a class="current" href="notice_list.html"><span class="new">12</span>通知</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 </div>
             <div class="title clearfix">
-            <div class="message_search"><a href="#" class="search_btn">搜索</a><input class="text" name="" type="text" value="查找联系人或私信内容" onclick="clearDefaultText(this,'查找联系人或私信内容')"/><a class="btn_gray" href="#"><span>发送私信</span></a></div>
-                <h2>我的私信</h2>
+                <a class="float_r btn_gray" href="notice_list.html"><span>返回通知列表</span></a>
+                <h2>我的通知</h2>
                 <div class="clear"></div>
             </div>
-            <div class="path"><a href="message_list.html">返回私信列表</a> 》当前共4条私信</div>
-            <div class="send_private_msg clearfix">
-            	<div class="title">发私信给白小小</div>
-                <div class="userimg"><a href="#"><img src="images/userimage/01.jpg" width="50" height="50" /></a></div>
-          <div class="content">
-                    <textarea name="" cols="" rows=""></textarea>
-                  <div class="btn"><a href="#" class="btn_gray"><span>发送</span></a></div>
-                </div>
-                <div class="clear"></div>
+          	<div class="notice_detail">
+            	<div class="header clearfix">
+                	<a class="face"><img src="images/userimage/05.jpg" width="50" height="50" /></a>
+                    <div class="name"><a href="#">iWine 系统管理员</a><p class="date">2012-09-14 17:14</p></div>
+               </div>
+               <div class="content">
+                    <div class="m_title">
+                        <a class="float_r" href="#">删除</a>
+                      <h1>活动取消通知（重要）</h1>
+                    </div>
+                    <div class="main">
+                    	<p>很高兴您曾在几个月之前试用过豆瓣阅读，体验过《春风沉醉的晚上》等一批免费作品。几个月过去了，豆瓣阅读已经有了很多新进展。
+　　
+　　 </p>
+                    	<p>&nbsp;</p>
+                    	<p>我们的作品商店已经有300多部作品在售，并且每周都在增加新作品。内容跨越小说、外国文学、幻想、历史、科技、生活等类别。您可以花费1.99元阅读一篇3-5万字的作品，也可以以纸质书定价三折左右的价格购买一本数十万字的电子书。你可以方便地用支付宝充值购买，在网页、iPad、Android 手机、Kindle 等设备上阅读。</p>
+                    </div>
+               </div>
             </div>
-            <div class="message_talk">
-          	<dl class="talk_l clearfix">
-            	<dt class="userimg"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" /></a></dt>
-                <dd class="content">
-                	<p><a href="#">Melody</a>：是别人从国外带回来送我的^^</p>
-                    <p class="info"><span><a action-data="userName=aluoaluo" action-type="replyMessage" href="javascript:void(0);" suda-data="key=message_messagelist_reply_page&value=message_messagelist_reply_page"> 回复</a></span><i class="date">12分钟前</i></p>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-            <dl class="talk_r clearfix">
-       	    <dt class="userimg"><a href="#"><img src="images/userimage/01.jpg" width="50" height="50" /></a></dt>
-          <dd class="content">
-                	<p><a href="#">白小小</a>：国内哪里能买到么？</p>
-                    <p class="info"><span><a action-data="userName=aluoaluo" action-type="replyMessage" href="javascript:void(0);" suda-data="key=message_messagelist_reply_page&value=message_messagelist_reply_page"> 回复</a></span><i class="date">35分钟前</i></p>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-            <dl class="talk_l clearfix">
-            	<dt class="userimg"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" /></a></dt>
-                <dd class="content">
-                	<p><a href="#">Melody</a>：是的，配牛排超赞！</p>
-                    <p class="info"><span><a action-data="userName=aluoaluo" action-type="replyMessage" href="javascript:void(0);" suda-data="key=message_messagelist_reply_page&value=message_messagelist_reply_page"> 回复</a></span><i class="date">1小时前</i></p>
-                </dd>
-                 <div class="clear"></div>
-            </dl>
-            <dl class="talk_r clearfix">
-       	    <dt class="userimg"><a href="#"><img src="images/userimage/01.jpg" width="50" height="50" /></a></dt>
-          <dd class="content">
-                	<p><a href="#">白小小</a>：哇，好酒一支啊！</p>
-                    <p class="info"><span><a action-data="userName=aluoaluo" action-type="replyMessage" href="javascript:void(0);" suda-data="key=message_messagelist_reply_page&value=message_messagelist_reply_page"> 回复</a></span><i class="date">2小时前</i></p>
-                </dd>
-                 <div class="clear"></div>
-            </dl>
-          </div>
    	  </div>
     </div>
     <div id="footer">
