--- a/public/template/notice_list.html
+++ b/public/template/notice_list.html
@@ -75,8 +75,9 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                 <div class="title"><a href="notice_detail.html"><strong>活动取消通知（重要）</strong></a></div>
                                 <div class="date">2012-08-31 18:34</div>
                             </div>
+                            <div class="action"><a href="#">删除</a></div>
                         </dd>
-                        <div class="clear"></div>
+                  <div class="clear"></div>
                     </dl>
                 	<dl class="clearfix">
                     	<dt>
