--- a/public/template/event_invite.html
+++ b/public/template/event_invite.html
@@ -143,7 +143,8 @@ document.onclick = mclose;
                     <div class="search float_r"><input class="text mr5" style="width:200px;" placeholder="搜索好友" name="" type="text" /><a href="event_search.html" class="btn_gray"><span>搜索好友</span></a></div>
                	    <h2>邀请好友参加活动</h2></div>
                     <div class="content">
-                    	<ul class="userlist2 clearfix">
+                    	<div class="select_action" style="margin-right:px;"><label class="selectall"><input name="" type="checkbox" value="" /> 全选</label></div>
+                        <ul class="userlist2 clearfix">
                         	<li>
                             	<div class="userpic"><a href="#"><img src="images/userimage/05.jpg" width="50" height="50" alt="username" /></a></div>
                                 <div class="userinfo">
