--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -309,10 +309,10 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 
 /*-------User list2--------*/
 .userlist2 {zoom:1;}
-.userlist2 li {width:50px;height:86px;overflow:hidden;float:left;padding:0 10px 20px 10px;_pading:0 10px 10px 10px;zoom:1;position:relative;}
-.userlist2 .userpic {width:50px;margin-right:15px;}
+.userlist2 li {width:50px;height:86px;overflow:hidden;float:left;padding:0 11px 20px 11px;_pading:0 10px 10px 10px;zoom:1;position:relative;}
+.userlist2 .userpic {width:50px;}
 .userlist2 .userinfo {text-align:center;margin-top:3px;}
-.userlist2 .userinfo .select {position:absolute;left:9px;top:37px;}
+.userlist2 .userinfo .select {position:absolute;left:10px;top:37px;}
 .follower li {position:relative;}
 .sidebox .userlist2 li {padding:0 10px 30px 0;_pading:0 10px 20px 0;zoom:1;}
 
@@ -584,5 +584,8 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 .tags a:hover:before{border-color:transparent #ffcc66 transparent transparent;}
 .tags li.select a {background:#ffcc66;color:#663300;}
 .tags li.select a:before {border-color:transparent #ffcc66 transparent transparent;border-style:solid;border-width:12px 12px 12px 0;}
+
+.select_action {text-align:right;padding:0 0 20px 0;}
+.selectall {padding:5px;background-color:#FFC;border:1px solid #CC9;}
 
 
