Add Invite Friend to join event

--- a/app/views/events/_event_detail.html.erb
+++ b/app/views/events/_event_detail.html.erb
@@ -19,7 +19,7 @@
                 :class => :icon_edit2 %>
               <%= link_to '查看参与者',
                 participants_user_event_path(@user,@event), :class => :icon_member %>
-              <%= link_to "邀请好友参加", new_event_participant_path(@event), :class => :icon_members %>
+              <%= link_to "邀请好友参加", new_event_invitee_path(@event), :class => :icon_members %>
             </div>
             <!--end manage-->
           </div>
