--- a/public/template/notice_list.html
+++ b/public/template/notice_list.html
@@ -66,8 +66,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             	<div class="notice_list">
        	    <dl class="clearfix unread">
                     	<dt>
-                        	<a class="face" href="#"><img src="images/userimage/user_30.jpg" width="30" height="30" /></a>
-                          <p class="name"><a href="#">iWine 系统管理员</a></p>
+                          <p class="name">iWine 系统管理员</p>
                         </dt>
                         <dd>
                         	<div class="content">
@@ -81,8 +80,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </dl>
                 	<dl class="clearfix">
                     	<dt>
-                        	<a class="face" href="#"><img src="images/userimage/user_30.jpg" alt="" width="30" height="30" /></a>
-                            <p class="name"><a href="#">iWine 系统管理员</a></p>
+                            <p class="name">iWine 系统管理员</p>
                         </dt>
                         <dd>
                         	<div class="content">
@@ -95,8 +93,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </dl>
                     <dl class="clearfix">
                     	<dt>
-                        	<a class="face" href="#"><img src="images/userimage/user_30.jpg" alt="" width="30" height="30" /></a>
-                            <p class="name"><a href="#">iWine 系统管理员</a></p>
+                            <p class="name">iWine 系统管理员</p>
                         </dt>
                         <dd>
                         	<div class="content">
@@ -109,8 +106,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </dl>
                     <dl class="clearfix">
                     	<dt>
-                        	<a class="face" href="#"><img src="images/userimage/user_30.jpg" alt="" width="30" height="30" /></a>
-                            <p class="name"><a href="#">iWine 系统管理员</a></p>
+                            <p class="name">iWine 系统管理员</p>
                         </dt>
                         <dd>
                         	<div class="content">
@@ -123,8 +119,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </dl>
                     <dl class="clearfix">
                     	<dt>
-                        	<a class="face" href="#"><img src="images/userimage/user_30.jpg" alt="" width="30" height="30" /></a>
-                            <p class="name"><a href="#">iWine 系统管理员</a></p>
+                            <p class="name">iWine 系统管理员</p>
                         </dt>
                         <dd>
                         	<div class="content">
@@ -137,8 +132,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </dl>
                     <dl class="clearfix">
                     	<dt>
-                        	<a class="face" href="#"><img src="images/userimage/user_30.jpg" alt="" width="30" height="30" /></a>
-                            <p class="name"><a href="#">iWine 系统管理员</a></p>
+                            <p class="name">iWine 系统管理员</p>
                         </dt>
                         <dd>
                         	<div class="content">
