--- a/public/template/notice_detail.html
+++ b/public/template/notice_detail.html
@@ -62,8 +62,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             </div>
           	<div class="notice_detail">
             	<div class="header clearfix">
-                	<a class="face"><img src="images/userimage/05.jpg" width="50" height="50" /></a>
-                    <div class="name"><a href="#">iWine 系统管理员</a><p class="date">2012-09-14 17:14</p></div>
+                    <div class="name">iWine 系统管理员<p class="date">2012-09-14 17:14</p></div>
                </div>
                <div class="content">
                     <div class="m_title">
