--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -248,6 +248,17 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .tabs a:hover, .tabs a.current {background-color:#9fc987;color:#fff;}
 .tabs .current a {background-color:#9fc987;color:#fff;}
 
+.tabs2 {margin: 0 0 20px 0;}
+.tabs2 .bg_l {background:url(bg/bg_message_tab_l.jpg) no-repeat left top;height:39px;padding-left:21px;}
+.tabs2 .bg_r {background:url(bg/bg_message_tab_r.jpg) no-repeat right top;height:39px;padding-right:21px;}
+.tabs2 .bg_m {background:url(bg/bg_message_tab_m.jpg) repeat-x left top;height:39px;line-height:36px;padding:0 0 0 9px;}
+.tabs2 li {float:left;position:relative;}
+.tabs2 a {font-size:14px; padding:0 30px 0 0;margin:0 27px 0 0;background:url(bg/bg_tab_line.gif) no-repeat right top;position:relative;color:#999;}
+.tabs2 a.current {color:#333;}
+.tabs2 a:hover {color:#333;text-decoration:none;}
+.tabs2 .new, .tabs2 .notice2 .new {position:absolute;left:30px;top:-15px;background:url(bg/bg_new.png) no-repeat left top;width:20px;height:20px;line-height:18px;text-align:center;color:#fff;font-size:10px;}
+.tabs2 .arrow, .tabs2 .arrow {background:url(bg/icon_message_current.jpg) no-repeat;height:9px;width:11px;position:absolute;left:10px;top:36px;}
+
 
 /*common style*/
 .comment_list li {margin: 0 0 10px 0;padding: 0 0 10px 0;width:590px;float:left;}
@@ -295,6 +306,16 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .userlist .userinfo .userlocation {color:#999;}
 .follower li {position:relative;}
 .sidebox .userlist li {padding:0 10px 30px 0;_pading:0 10px 20px 0;zoom:1;}
+
+/*-------User list2--------*/
+.userlist2 {zoom:1;}
+.userlist2 li {width:50px;height:86px;overflow:hidden;float:left;padding:0 10px 20px 10px;_pading:0 10px 10px 10px;zoom:1;position:relative;}
+.userlist2 .userpic {width:50px;margin-right:15px;}
+.userlist2 .userinfo {text-align:center;margin-top:3px;}
+.userlist2 .userinfo .select {position:absolute;left:9px;top:37px;}
+.follower li {position:relative;}
+.sidebox .userlist2 li {padding:0 10px 30px 0;_pading:0 10px 20px 0;zoom:1;}
+
 
 /*---------table style-----------*/
 .data_style1 td {background-color:#f3f3f3;border-right:2px solid #fff;border-bottom:2px solid #fff;padding:2px 10px;}
