增加活动和通知的未读数目显示和提醒。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -119,7 +119,7 @@
             });  
             setTimeout('getMessageCount()',6000);   
           }
-          // getMessageCount();
+          getMessageCount();
         <% end %>
 
         // Support Placeholder For All Browers
