--- a/app/views/messages/_messages_count.html.erb
+++ b/app/views/messages/_messages_count.html.erb
@@ -1,3 +1,4 @@
 <div class="message_notice">
-	<%= link_to "有#{count}条私信", conversations_path %> 
+	<% if message_count.to_i > 0 %><%= link_to "有#{message_count}条私信", conversations_path %> <br/><% end %>
+	<% if receipt_count.to_i > 0 %><%= link_to "有#{receipt_count}条通知", system_messages_path %><% end %>
 </div>
