--- a/app/views/messages/unread.js.erb
+++ b/app/views/messages/unread.js.erb
@@ -1,6 +1,7 @@
-<% if @count > 0 %>
+<% if @unread_receipts_count > 0 || @unread_messages_count %>
 	$(".userbox").find(".message_notice").remove();
-	$(".userbox").append("<%= escape_javascript(render('messages_count', :count => @count)) %>");
+	$(".userbox").append("<%= escape_javascript(render('messages_count', \
+		:message_count => @unread_messages_count, :receipt_count => @unread_receipts_count)) %>");
 <% end %>
 
 
