--- a/app/views/share/_notification_title.html.erb
+++ b/app/views/share/_notification_title.html.erb
@@ -5,15 +5,21 @@
             <div class="bg_m">
                 <ul class="clearfix">
                     <li class="p-message">
-                        <span class="arrow"></span>
-                        <%= link_to conversations_path, :class => "current" do %>
-                            <%# TODO: 修改数目 %>
-                            <span class="new">2</span>私信
+                        <% if defined?(message) %><span class="arrow"></span><% end %>
+                        <%= link_to conversations_path, :class => "#{'current' if defined?(message)}" do %>
+                            <% if @unread_messages_count.to_i > 0 %>
+                                <span class="new"><%= @unread_messages_count %></span>
+                            <% end %>
+                            私信
                         <% end %>
                     </li>
                     <li class="notice2">
-                        <%= link_to system_messages_path do %>
-                            <span class="new">1</span>通知
+                        <% if defined?(system_message) %><span class="arrow"></span><% end %>
+                        <%= link_to system_messages_path, :class => "#{'current' if defined?(system_message)}" do %>
+                            <% if @unread_receipts_count.to_i > 0 %>
+                                <span class="new"><%= @unread_receipts_count %></span>
+                            <% end %>
+                            通知
                         <% end %>
                     </li>
                 </ul>
