--- a/app/views/users/events/participants.html.erb
+++ b/app/views/users/events/participants.html.erb
@@ -28,6 +28,7 @@
                     <td class="name"><%= participant.username %></td>
                     <td class="email"><%= participant.email %></td>
                     <td class="tel"><%= participant.telephone %></td>
+                    <td class="note"><%= participant.note %></td>
                     <td class="date"><%= participant.created_at.to_s(:normal) %></td>
                   </tr>
                 <% end %>
