通知提示框更新

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -27,7 +27,14 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             	<ul>
                 	<li class="userbox">
                     	<a class="userpic" href="#"><img src="images/userimage/06.jpg" width="20" height="20" /></a><a href="#"><img src="images/common/userbox_arrow.jpg" width="22" height="30" /></a>
-                        <div class="message_notice"><a href="#" >有1条私信</a></div>
+                        <div class="attention">
+                        	<div class="top"></div>
+                        	<div class="mid">
+                        		<a href="#">有1条私信</a>
+                        		<a href="#">有2条通知</a>
+                        	</div>
+                        	<div class="bot"></div>
+                        </div>
                     </li>
                     <li class="top_add"><a href="#" class="btn_add">添加</a></li>
                 </ul>
