--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -385,7 +385,11 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .CategoryDropdown .hot dt {width:30px;float:left;margin-right:10px;}
 .CategoryDropdown .hot dd {width:190px;float:left;}
 .CategoryDropdown .hot dt a, .CategoryDropdown .hot dd a {padding:0;background:none;color:#333;}
-.message_notice {background:url(../images/bg/message_notice.png) no-repeat left top;display:inline-block;width:91px;height:52px;text-align:center;color:#875f0e;position:absolute;left:-44px;top:38px;padding:20px 5px 0 5px;}
+.attention {display:inline-block;width:101px;text-align:center;color:#875f0e;position:absolute;left:-44px;top:38px;}
+.attention .top {background: url(../images/common/attention_top.png) no-repeat left top;height:11px;}
+.attention .mid {background: url(../images/common/attention_mid.png) repeat-y left top;padding:10px;}
+.attention .bot {background: url(../images/common/attention_bot.png) no-repeat left bottom;height:5px;}
+#header #top_right .attention .mid a {display:block;float:none;}
 #header #top_right .message_notice a {float:none;color:#875f0e;}
 #header #top_right .message_notice a:hover {color:#875f0e;text-decoration:none;}
 .globel_navi .city li a {display:block;float:left;margin:5px 13px;padding:0;}
