--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -309,10 +309,10 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 
 /*-------User list2--------*/
 .userlist2 {zoom:1;}
-.userlist2 li {width:50px;height:86px;overflow:hidden;float:left;padding:0 10px 20px 10px;_pading:0 10px 10px 10px;zoom:1;position:relative;}
-.userlist2 .userpic {width:50px;margin-right:15px;}
+.userlist2 li {width:50px;height:86px;overflow:hidden;float:left;padding:0 11px 20px 11px;_pading:0 10px 10px 10px;zoom:1;position:relative;}
+.userlist2 .userpic {width:50px;}
 .userlist2 .userinfo {text-align:center;margin-top:3px;}
-.userlist2 .userinfo .select {position:absolute;left:9px;top:37px;}
+.userlist2 .userinfo .select {position:absolute;left:10px;top:37px;}
 .follower li {position:relative;}
 .sidebox .userlist2 li {padding:0 10px 30px 0;_pading:0 10px 20px 0;zoom:1;}
 
@@ -385,7 +385,11 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .CategoryDropdown .hot dt {width:30px;float:left;margin-right:10px;}
 .CategoryDropdown .hot dd {width:190px;float:left;}
 .CategoryDropdown .hot dt a, .CategoryDropdown .hot dd a {padding:0;background:none;color:#333;}
-.message_notice {background:url(bg/message_notice.png) no-repeat left top;display:inline-block;width:91px;height:52px;text-align:center;color:#875f0e;position:absolute;left:-44px;top:38px;padding:20px 5px 0 5px;}
+.attention {display:inline-block;width:101px;text-align:center;color:#875f0e;position:absolute;left:-44px;top:38px;}
+.attention .top {background: url(common/attention_top.png) no-repeat left top;height:11px;}
+.attention .mid {background: url(common/attention_mid.png) repeat-y left top;padding:10px;}
+.attention .bot {background: url(common/attention_bot.png) no-repeat left bottom;height:5px;}
+#header #top_right .attention .mid a {display:block;float:none;}
 #header #top_right .message_notice a {float:none;color:#875f0e;}
 #header #top_right .message_notice a:hover {color:#875f0e;text-decoration:none;}
 .globel_navi .city li a {display:block;float:left;margin:5px 13px;padding:0;}
@@ -584,5 +588,8 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 .tags a:hover:before{border-color:transparent #ffcc66 transparent transparent;}
 .tags li.select a {background:#ffcc66;color:#663300;}
 .tags li.select a:before {border-color:transparent #ffcc66 transparent transparent;border-style:solid;border-width:12px 12px 12px 0;}
+
+.select_action {text-align:right;padding:0 0 20px 0;}
+.selectall {padding:5px;background-color:#FFC;border:1px solid #CC9;}
 
 
