通知删除提示

--- a/public/template/notice_list.html
+++ b/public/template/notice_list.html
@@ -62,6 +62,8 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <h2>我的通知</h2>
                 <div class="clear"></div>
             </div>
+            <div class="success mt20">删除成功</div>
+            <div class="error mt20">您未选择任何邮件</div>
           	<div class="message_list">
             	<div class="notice_list">
        	    <dl class="clearfix unread">
