完善 通知系统。

--- a/app/views/messages/unread.js.erb
+++ b/app/views/messages/unread.js.erb
@@ -1,5 +1,5 @@
 <% if @unread_receipts_count > 0 || @unread_messages_count > 0 %>
-	$(".userbox").find(".message_notice").remove();
+	$(".userbox").find(".attention").remove();
 	$(".userbox").append("<%= escape_javascript(render('messages_count', \
 		:message_count => @unread_messages_count, :receipt_count => @unread_receipts_count)) %>");
 <% end %>
