--- a/app/views/system_messages/index.html.erb
+++ b/app/views/system_messages/index.html.erb
@@ -24,7 +24,7 @@
 	                    	<div class="content">
 	                        	<div class="checkbox"><input name="receipt_id[]" type="checkbox" value="<%= receipt.id %>" /></div>
 	                            <div class="title">
-	                            	<%= link_to truncate(receipt.notification.body, :length => 15), system_message_path(receipt) %>
+	                            	<%= link_to receipt.notification.subject, system_message_path(receipt) %>
 	                            </div>
 	                            <div class="date"><%= receipt.created_at.to_s(:cn_normal) %></div>
 	                        </div>
@@ -51,19 +51,15 @@
 	});
 
 	$('#mark_as_read').click(function(){
-		if($('.notice_list input:checked').length > 0 ){
-			form = $('.notice_list form')
-			form.attr('action', '/system_messages/mark_as_read');
-			form.submit();
-		}
+		form = $('.notice_list form')
+		form.attr('action', '/system_messages/mark_as_read');
+		form.submit();
 	});
 
 	$('#move_to_trash').click(function(){
-		if ($('.notice_list input:checked').length > 0 ){
-			form = $('.notice_list form')
-			form.attr('action', '/system_messages/move_to_trash');
-			form.submit();
-		}
+		form = $('.notice_list form')
+		form.attr('action', '/system_messages/move_to_trash');
+		form.submit();
 	});
 	$("#check-all").change(function(){
 	   	if ($(this).attr("checked") == "checked") {
