1. 更新活动发私信的内容 2. 使用whenever 执行rake task 3. 使用email通知用户，活动明天举行.

--- a/app/views/event_participants/edit.js.erb
+++ b/app/views/event_participants/edit.js.erb
@@ -2,8 +2,8 @@ $("#join_form").html("<%= escape_javascript(render('join_form', :participant => 
 $.fancybox({
         padding: 0,
          maxWidth       : 550,
-        maxHeight       : 350,
-        minHeight: 350,
+        maxHeight       : 370,
+        minHeight: 370,
         fitToView       : false,
         width           : '100%',
         height          : '100%',
@@ -56,6 +56,7 @@ $.fancybox({
       if (!self.validateEmail($(element['input']).val())){
 
       self.flashWaring(element['input'],'请输入正确的邮箱格式');
+      errors.push(element);
       }
     }
     }
