--- a/app/views/users/events/create_events.html.erb
+++ b/app/views/users/events/create_events.html.erb
@@ -46,18 +46,13 @@
                         <% if event.published? && !event.timeout? # 活动已经发布 %>
                         <div>
                           <%= link_to "编辑活动", edit_event_path(event), :class => :icon_edit2 %> |
-                          <%= link_to "取消活动",
-                          published_event_path(event,
-                                               :publish_status => ::Event::DRAFTED_STATUS ),
-                                               :class => :icon_cancle %> |
+                          <%= link_to "取消活动", cancle_event_path(event), :class => :icon_cancle %> |
                           <%= link_to "查看参与者", participants_user_event_path(@user, event), :class =>  :icon_member %>
                         </div>
                       <% elsif event.draft? # 活动是草稿 %>
                         <div>
                           <span class="event_unpublic mr5">未发布</span>
-                          <%= link_to '发布', published_event_path(event,
-                                                           :publish_status => ::Event::PUBLISHED_STATUS),
-                                                           :class => :icon_public %> |
+                          <%= link_to '发布', published_event_path(event), :class => :icon_public %> |
                           <%= link_to "编辑活动", edit_event_path(event), :class => :icon_edit2 %>
                         </div>
                       <% elsif event.timeout? # 活动已经结束 %>
@@ -94,4 +89,3 @@
     </div>
   </div>
 </div>
-                        
