--- a/app/views/cellar_items/_form.html.erb
+++ b/app/views/cellar_items/_form.html.erb
@@ -1,16 +1,24 @@
-<%= render 'share/error_messages', :target => @cellar_item %>
+<input type="hidden" name="wine_id" value="<%= @wine.id%>"/>
 <div class="left">
     <div class="optional">
       <label class="vm">酒名</label>
-      <div class="content"><%= @wine_detail.origin_zh_name %></div>
+      <div class="content"><%= "#{@wine.origin_name} #{@wine.name_zh}" %></div>
     </div>
-    <div class="optional">
-      <label>年份</label>
-      <div class="content"><%= @wine_detail.show_year %></div>
+    <div class="required">
+      <label class="vm"><span>*</span>年份</label>
+      <div class="content">
+        <%= f.date_select :year, :discard_day => true, 
+            :discard_month => true, :start_year => Time.now.year, 
+            :end_year => 1950, :prompt => {:year => "选择年份"} %>年
+
+        <label class="nv">
+          <%= check_box_tag("users_wine_cellar_item[is_nv]", 1, @cellar_item.is_nv, :id => "check_nv") %>NV/无年份葡萄酒
+        </label>
+      </div>
     </div>
     <div class="optional">
       <label>产区</label>
-      <div class="content"><%= @wine_detail.wine.region_path_zh %></div>
+      <div class="content"><%= @wine.region_path_zh %></div>
     </div>
     <div class="optional">
       <label>酒庄</label>
@@ -60,7 +68,26 @@
 </div>
 <div class="right">
   <div class="wine_img">
-    <%= wine_label_tag( @wine_detail, :thumb_name => "thumb", :title => @wine_detail.name, :alt => @wine_detail.name, :height => 200, :width => 200 )%>
+    <%= wine_label_tag( @wine, :thumb_name => "thumb", :title => @wine.name_zh, :alt => @wine.name_zh, :height => 200, :width => 200 )%>
   </div>
   <div class="clear"></div>
 </div>
+<script type="text/javascript">
+  if ($("#check_nv").attr("checked") == "checked") {
+    disableCheckbox();
+  };
+  $("#check_nv").change(function(){
+    if ($(this).attr("checked") == "checked") {
+     disableCheckbox();
+    }else{
+      $("#users_wine_cellar_item_year_1i").removeAttr('disabled');
+      $("#users_wine_cellar_item_year_2i").removeAttr('disabled');
+      $("#users_wine_cellar_item_year_3i").removeAttr('disabled');
+    }
+  });
+  function disableCheckbox(){
+    $("#users_wine_cellar_item_year_1i").attr("disabled", "disabled");
+    $("#users_wine_cellar_item_year_2i").attr("disabled", "disabled");
+    $("#users_wine_cellar_item_year_3i").attr("disabled", "disabled");
+  }
+</script>
