--- a/app/views/cellar_items/add_step_two.html.erb
+++ b/app/views/cellar_items/add_step_two.html.erb
@@ -24,24 +24,25 @@
           </div>
           <ul class="wine_list">
             <% @search.wines.each do |wine_detail| %>
+                <% releast_detail = wine_detail.wine.details.releast_detail.first %>
                 <li>
                   <div class="add_to_cellar">
-                    <%= link_to new_cellar_item_path(current_user.cellar, :wine_detail_id => wine_detail.id), :class => "btn_blue" do %>
+                    <%= link_to new_cellar_item_path(current_user.cellar, :wine_id => wine_detail.wine_id), :class => "btn_blue" do %>
                         <span>加入酒窖</span>
                     <% end %>
                   </div>
                   <div class="wine_img">
-                    <%= link_to wine_path(wine_detail.id) do %>
-                      <%= wine_label_tag( wine_detail, :thumb_name => "thumb_x", :width => "70", :height => "70" ) %>
+                    <%= link_to wine_path(releast_detail) do %>
+                      <%= wine_label_tag( releast_detail, :thumb_name => "thumb_x", :width => "70", :height => "70" ) %>
                     <% end %>
                   </div>
                   <div class="wine_info">
                     <h2>
-                      <%= wine_name_zh_link(wine_detail.cname, wine_detail) %>
+                      <%= wine_name_zh_link(releast_detail.wine.name_zh, releast_detail) %>
                     </h2>
-                    <h3><%= link_to wine_detail.origin_name, wine_path(wine_detail.id) %></h3>
-                    <p><%= wine_detail.wine.region_path_zh %></p>
-                    <p><%= wine_detail.wine.style.name_zh %></p>
+                    <h3><%= link_to releast_detail.wine.origin_name, wine_path(releast_detail) %></h3>
+                    <p><%= releast_detail.wine.region_path_zh %></p>
+                    <p><%= releast_detail.wine.style.name_zh %></p>
                   </div>
                   <div class="clear"></div>
                 </li>
